
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ egg ;
 scalar_t__ egghunter ;
 int printf (char*,int) ;
 int strlen (scalar_t__) ;

void main()
{
    printf("Egg hunter shellcode Length:  %d\n", strlen(egghunter));
    printf("Egg shellcode Length:  %d\n", strlen(egg));

    int (*ret)() = (int(*)())egghunter;

    ret();
}
