; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/arm/extr_44811.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/arm/extr_44811.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i8] c"Egg hunter shellcode Length:  %d\0A\00", align 1
@egghunter = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [27 x i8] c"Egg shellcode Length:  %d\0A\00", align 1
@egg = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @main() #0 {
  %1 = alloca i32 (...)*, align 8
  %2 = load i64, i64* @egghunter, align 8
  %3 = call i32 @strlen(i64 %2)
  %4 = call i32 @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %3)
  %5 = load i64, i64* @egg, align 8
  %6 = call i32 @strlen(i64 %5)
  %7 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %6)
  %8 = load i64, i64* @egghunter, align 8
  %9 = inttoptr i64 %8 to i32 (...)*
  store i32 (...)* %9, i32 (...)** %1, align 8
  %10 = load i32 (...)*, i32 (...)** %1, align 8
  %11 = call i32 (...) %10()
  ret void
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @strlen(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
